enforcing user id on all paths
